--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Portfólio</h1>
     <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="https://github.com/RobertGabriel97/Site-hamburguer">Site-hamburguer</a></li>
+        <li><a href="https://github.com/RobertGabriel97/login-senha">login-senha</a></li>
     </ul>
      <nav>
         <ul>
